--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
-        android:src="@drawable/ic_add_foreground"
+        android:src="@drawable/ic_add"
         app:layout_anchor="@id/bottomAppBar"
         app:fabCustomSize="65dp"
         android:contentDescription="Add Post or Story"/>
