--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -137,6 +137,20 @@
                     app:layout_constraintTop_toBottomOf="@id/birthday_editText" />
 
                 <EditText
+                    android:id="@+id/username_editText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp"
+                    android:ems="16"
+                    android:hint="Enter Username"
+                    android:inputType="text"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/lightBlue_FB"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/emailID_editText"
+                    app:layout_constraintTop_toBottomOf="@id/emailID_editText" />
+
+                <EditText
                     android:id="@+id/mobile_editText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -147,8 +161,8 @@
                     android:textColor="@color/white"
                     android:textColorHint="@color/lightBlue_FB"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="@+id/emailID_editText"
-                    app:layout_constraintTop_toBottomOf="@id/emailID_editText" />
+                    app:layout_constraintStart_toStartOf="@+id/username_editText"
+                    app:layout_constraintTop_toBottomOf="@id/username_editText" />
 
                 <EditText
                     android:id="@+id/newPassword_editText"
