--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -16,40 +16,40 @@
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:background="@color/white"
+            android:elevation="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:elevation="10dp">
+            app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
-                android:orientation="horizontal"
                 android:layout_marginRight="16dp"
+                android:orientation="horizontal"
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp">
 
                 <ImageView
                     android:layout_width="15dp"
                     android:layout_height="match_parent"
-                    android:src="@drawable/ic_lock"
+                    android:clickable="true"
                     android:scaleType="fitCenter"
-                    android:clickable="true"/>
+                    android:src="@drawable/ic_lock"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="adiupd123"
                     android:layout_marginLeft="10dp"
-                    android:textSize="24sp"
-                    android:textColor="@color/black"/>
+                    android:text="adiupd123"
+                    android:textColor="@color/black"
+                    android:textSize="24sp"/>
 
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="match_parent"
-                    android:src="@drawable/ic_arrow_down"
                     android:layout_marginLeft="10dp"
-                    android:clickable="true"/>
+                    android:clickable="true"
+                    android:src="@drawable/ic_arrow_down"/>
 
                 <View
                     android:layout_width="0dp"
@@ -59,27 +59,27 @@
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="match_parent"
-                    android:src="@drawable/ic_add_square"
+                    android:clickable="true"
                     android:scaleType="fitCenter"
-                    android:clickable="true"/>
+                    android:src="@drawable/ic_add_square"/>
 
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="match_parent"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/ic_menuline"
+                    android:layout_marginLeft="10dp"
                     android:clickable="true"
-                    android:layout_marginLeft="10dp"/>
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_menuline"/>
 
             </LinearLayout>
         </com.google.android.material.appbar.MaterialToolbar>
 
         <RelativeLayout
+            android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/relativeLayout"
-            app:layout_constraintTop_toBottomOf="@id/userProfile_toolbar"
-            android:padding="16dp">
+            android:padding="16dp"
+            app:layout_constraintTop_toBottomOf="@id/userProfile_toolbar">
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:layout_width="match_parent"
@@ -92,13 +92,13 @@
                 android:id="@+id/profilePhoto_imageView"
                 android:layout_width="160dp"
                 android:layout_height="160dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="80dp"
+                android:scaleType="fitCenter"
                 android:src="@drawable/ic_user_profile"
                 app:civ_border_color="@color/white"
-                app:civ_border_width="10dp"
-                android:scaleType="fitCenter"
-                android:layout_marginTop="80dp"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"/>
+                app:civ_border_width="10dp" />
 
             <TextView
                 android:id="@+id/personName_textView"
@@ -126,25 +126,25 @@
                 android:id="@+id/horizontalLinearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_below="@id/personDescription_textView"
-                android:layout_marginTop="16dp">
+                android:layout_marginTop="16dp"
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:id="@+id/postsCount_linearLayout"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_margin="8dp">
+                    android:layout_margin="8dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/postsCount_textView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="55"
-                        android:textColor="@color/black"
                         android:textAlignment="center"
+                        android:textColor="@color/black"
                         android:textSize="24sp"
                         android:textStyle="bold" />
 
@@ -153,8 +153,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Posts"
-                        android:textColor="@color/black"
                         android:textAlignment="center"
+                        android:textColor="@color/black"
                         android:textSize="16sp" />
 
                 </LinearLayout>
@@ -162,28 +162,28 @@
                 <LinearLayout
                     android:id="@+id/followers_linearLayout"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_margin="8dp">
+                    android:layout_margin="8dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/followers_textView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="4350"
-                        android:textStyle="bold"
-                        android:textColor="@color/black"
                         android:textAlignment="center"
-                        android:textSize="24sp" />
+                        android:textColor="@color/black"
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/followersLabel_textView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Followers"
-                        android:textColor="@color/black"
                         android:textAlignment="center"
+                        android:textColor="@color/black"
                         android:textSize="16sp" />
 
                 </LinearLayout>
@@ -191,18 +191,18 @@
                 <LinearLayout
                     android:id="@+id/following_linearLayout"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_margin="8dp" >
+                    android:layout_margin="8dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical" >
 
                     <TextView
                         android:id="@+id/following_textView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="395"
-                        android:textColor="@color/black"
                         android:textAlignment="center"
+                        android:textColor="@color/black"
                         android:textSize="24sp"
                         android:textStyle="bold" />
 
@@ -211,8 +211,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Following"
-                        android:textColor="@color/black"
                         android:textAlignment="center"
+                        android:textColor="@color/black"
                         android:textSize="16sp" />
 
                 </LinearLayout>
@@ -246,9 +246,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="16dp"
             app:cardBackgroundColor="@color/blue_FB"
             app:cardCornerRadius="8dp"
-            android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/divider">
@@ -294,32 +294,27 @@
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMode="fixed"
             android:layout_margin="16dp"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/card_view3">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/card_view3"
+            app:tabMode="fixed">
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Monday" />
+                android:text="Posts" />
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tuesday" />
-
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Wednesday" />
+                android:text="Saved" />
         </com.google.android.material.tabs.TabLayout>
         <View
+            android:id="@+id/view"
             android:layout_width="match_parent"
             android:layout_height="500dp"
             app:layout_constraintTop_toBottomOf="@+id/tabLayout"/>
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
