--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -19,6 +19,7 @@
             android:id="@+id/profileCover_imageView"
             android:layout_width="match_parent"
             android:layout_height="160dp"
+            android:scaleType="centerCrop"
             android:layout_alignParentTop="true"
             android:background="@color/green_700"
             app:shapeAppearanceOverlay="@style/roundedCorners" />
@@ -69,7 +70,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/blue_FB"
+                android:background="@color/cardview_dark_background"
                 android:padding="16dp">
 
                 <EditText
